# fingered

./: Makefile.am  autogen.sh  configure.ac
src/include/: Fingered.h
src/lib/: Makefile.mk  fingered_event.c  fingered_main.c  fingered_private.h  fingered_user.c
